# solemon

./: .gitignore  .vercelignore  README.md  package-lock.json  package.json  vercel.json
frontend/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Game.tsx  WalletContext.tsx
frontend/src/idl/: solemon_game.json
frontend/src/lib/: anchor.ts  constants.ts  pdas.ts  species.ts
scripts/: deploy-devnet.sh  init-config.mjs
solemon_game/: Anchor.toml  Cargo.toml
solemon_game/programs/solemon_game/: Cargo.toml
solemon_game/programs/solemon_game/src/: constants.rs  error.rs  lib.rs  state.rs
solemon_game/programs/solemon_game/src/instructions/: catch_wild.rs  create_player.rs  end_encounter.rs  explore.rs  heal_team.rs  initialize_config.rs  mod.rs  update_config.rs
